# xzvapp

./: README.md  app.py  app_test.py  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
.serverless/: cloudformation-template-update-stack.json  requirements  serverless-state.json
