[tool.poetry]
name = "xzvapp"
version = "0.1.0"
description = ""
authors = ["Daniel Omar Vergara Pérez <daniel.omar.vergara@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
